--- a/frontend/chat-app/src/index.css
+++ b/frontend/chat-app/src/index.css
@@ -223,7 +223,7 @@ li {
 
 .friend-button {
   font-family: Pacifico, sans-serif;
-  padding: 1rem 2rem 1rem 2rem;
+  padding: .5rem 2rem .5rem 2rem;
   margin-left: 2rem;
   background-color: #5788b9;
   border-radius: 0.5rem;
@@ -337,6 +337,9 @@ li {
 
 /* logininView Ends */
 
+/* RegisterView */
+
+
 .register-input-box {
   display: flex;
 }
@@ -371,3 +374,48 @@ li {
   cursor: pointer;
 }
 
+/* RegisterView/SetphotoBiew Ends*/
+
+/* ProfileView */
+
+
+.edit input, button, label {
+  background: none;
+  border: none;
+  font-size: 2rem;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+}
+
+
+.edit button {
+  padding-left: -8rem;
+}
+
+.edit button:hover {
+  cursor: pointer;
+  color: orange;
+}
+
+.edit label {
+  padding-left: 2rem;
+}
+
+.edit input {
+  width: 24rem;
+  margin-left: 4rem;
+  margin-right: 2rem;
+  padding-left: 3rem;
+  padding-right: 1rem;
+}
+
+
+.line{
+  width: 45rem;
+  height: 1rem;
+  border-bottom: 1px solid black;
+  margin-bottom: 1rem;
+  }
+
+
+
+/* ProfileView Ends*/
