Updated message view

--- a/frontend/chat-app/src/index.css
+++ b/frontend/chat-app/src/index.css
@@ -51,7 +51,6 @@ main {
   padding: 1rem;
   background-color: rgb(214, 213, 241);
   z-index: 1;
-
 }
 
 footer {
@@ -59,7 +58,6 @@ footer {
   background-color: var(--dark-blue-color);
   color: var(--white-color);
   z-index: 2;
-
 }
 
 /* Commons */
@@ -155,8 +153,7 @@ li {
 /* MessageView */
 
 .sidepanel {
-  position: absolute;
-  top:7%;
+  top: 7%;
   left: -1%;
 }
 
@@ -167,7 +164,6 @@ li {
 }
 
 .friends-box-v2 {
-  position: relative;
   height: 80vh;
   width: 40vw;
   opacity: 0.9;
@@ -177,7 +173,7 @@ li {
   align-items: center;
   border-radius: 0.5rem;
   box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem #132729;
-  margin: 2rem;
+  margin: 2rem 0 2rem 4rem;
   z-index: 1;
 }
 
@@ -190,8 +186,124 @@ li {
   overflow: auto;
 }
 
-/* MessageView Ends */
+.messenger-container {
+  height: 80vh;
+  width: 40vw;
+  background-color: #2b3057;
+  opacity: 0.9;
+  background-color: rgb(45, 74, 151);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 0.5rem;
+  box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem #132729;
+  margin: 2rem 4rem 2rem 0;
+}
 
+.messages-container {
+  width: 100%;
+  height: 65%;
+  background-color: #2aa1f0;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+
+.messenger-container h2 {
+  color: var(--brand-color);
+  font-family: Lobster Two, sans-serif;
+  font-size: 2.5rem;
+}
+
+.sender-message {
+  padding: 1rem 0rem 1rem 1rem;
+  background-color: var(--lime-color);
+  display: flex;
+  justify-content: flex-end;
+  word-wrap: break-word;
+}
+
+.sender-message p {
+  padding: 0 1rem 0 1rem;
+}
+
+.receiver-message p {
+  padding: 0 1rem 0 1rem;
+}
+
+.receiver-message {
+  padding: 1rem 1rem 1rem 0rem;
+  background-color: var(--lime-color);
+  display: flex;
+  justify-content: flex-start;
+  word-wrap: break-word;
+}
+
+.message-container  {
+  max-width: 20rem;
+  background-color: #5788b9;
+}
+
+.receiver  {
+  border-radius: 0rem 0.8rem 0.8rem 0.8rem
+}
+
+.sender  {
+  border-radius: 0.8rem 0rem 0.8rem 0.8rem
+}
+
+
+.arc-container.r {
+  background-color: #5788b9;
+}
+
+.arc.r{
+  content: "";  
+  background-color: var(--lime-color);
+  height: 100%;
+  width: 1rem;
+  border-top-right-radius: 1.5rem;
+}
+
+.arc-container.s {
+  background-color: #5788b9;
+}
+
+.arc.s{
+  content: "";  
+  background-color: var(--lime-color);
+  height: 100%;
+  width: 1rem;
+  border-top-left-radius: 1.5rem;
+}
+
+.message-lower-panel {
+  width: 100%;
+  display: flex;
+  margin: 2.5rem;
+}
+
+.message-lower-panel textarea {
+  width:75%;
+  margin-left: 8%;
+  resize: none;
+  font-size: 100%;
+}
+
+.message-lower-panel button {
+  border-radius: 1rem;
+  background-color: #132729;
+  color: #d2eee7;
+  margin-left: 2%;
+  margin-right: 4%;
+}
+
+.message-lower-panel button:hover {
+  background-color: #1a3638;
+  color: rgb(255, 123, 0);
+}
+
+/* MessageView Ends */
 
 /* FriendView */
 
@@ -207,8 +319,6 @@ li {
   box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem #132729;
   margin: 2rem;
 }
-
-
 
 .friends-box h2 {
   color: var(--brand-color);
@@ -270,7 +380,7 @@ li {
 
 .friend-button {
   font-family: Pacifico, sans-serif;
-  padding: .5rem 2rem .5rem 2rem;
+  padding: 0.5rem 2rem 0.5rem 2rem;
   margin-left: 2rem;
   background-color: #5788b9;
   border-radius: 0.5rem;
@@ -386,7 +496,6 @@ li {
 
 /* RegisterView */
 
-
 .register-input-box {
   display: flex;
 }
@@ -399,7 +508,6 @@ li {
   font-size: 3rem;
   margin: 1rem;
 }
-
 
 .set-photo label:nth-child(3) {
   color: #132729;
@@ -425,14 +533,14 @@ li {
 
 /* ProfileView */
 
-
-.edit input, button, label {
+.edit input,
+button,
+label {
   background: none;
   border: none;
   font-size: 2rem;
   font-family: "Yanone Kaffeesatz", sans-serif;
 }
-
 
 .edit button {
   padding-left: -8rem;
@@ -455,22 +563,18 @@ li {
   padding-right: 1rem;
 }
 
-
-.line{
+.line {
   width: 45rem;
   height: 1rem;
   border-bottom: 1px solid black;
   margin-bottom: 1rem;
-  }
+}
 
-  .line-v2{
-    width: 100%;
-    height: 1rem;
-    border-bottom: 1px solid black;
-    margin-bottom: 1rem;
-    }
-  
-
-
+.line-v2 {
+  width: 100%;
+  height: 1rem;
+  border-bottom: 1px solid black;
+  margin-bottom: 1rem;
+}
 
 /* ProfileView Ends*/
